@@ -88,7 +88,8 @@
 #define DEFAULT_BUFFER_SIZE            16384
 #define DEFAULT_SEEDBYTES              1024
 #define DEFAULT_MAXBYTES               1024000
-
+#define DEFAULT_SENDWAIT               60
+#define DEFAULT_RECVWAIT               60
 #define CONFIG_MODULE_DIR              "ModuleDir"
 #define CONFIG_RANDOM_FILE             "RandomFile"
 #define CONFIG_SEEDBYTES               "SeedBytes"
@@ -165,8 +166,11 @@ typedef struct NsOpenSSLConn {
     SOCKET                    wsock;
     int                       refcnt;    /* don't ns_free() unless this is 0 */
     int                       timeout;
-    struct timeval            timer;
-    struct NsOpenSSLDriver   *ssldriver; /* the driver this conn belongs to */
+    int                       sendwait;
+    int                       recvwait;
+    struct timeval            timer;      /* for performance measurement */
+    struct Ns_Driver         *driver;    /* the core sock driver this conn belongs to */
+    struct NsOpenSSLDriver   *ssldriver; /* the SSL driver this conn belongs to */
 } NsOpenSSLConn;
 
 /*
