@@ -109,6 +109,8 @@ NsOpenSSLConnCreate(SOCKET socket, NsOpenSSLContext *sslcontext)
     sslconn->server          = sslcontext->server;
     sslconn->sslcontext      = sslcontext;
     sslconn->socket          = socket;
+    sslconn->sendwait        = DEFAULT_SENDWAIT;
+    sslconn->recvwait        = DEFAULT_RECVWAIT;
     sslconn->wsock           = INVALID_SOCKET;
     sslconn->ssl             = NULL;
     sslconn->sslctx          = NULL;
@@ -588,7 +590,7 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
     NsOpenSSLConn *sslconn = SSL_get_app_data(ssl);
     SOCKET         socket  = SSL_get_fd(ssl);
 
-    Ns_Log(Debug, "Send(%d): START: towrite = %d, wrote = %d", socket, towrite, total);
+    //Ns_Log(Debug, "Send(%d): START: towrite = %d, wrote = %d", socket, towrite, total);
 
     /*
      * We loop until all bytes are written. We can call NsOpenSSLRecv() at any
@@ -610,16 +612,19 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
         switch(SSL_get_error(ssl, rc)) {
 
             case SSL_ERROR_NONE:
-                Ns_Log(Debug, "Send(%d): SSL_ERROR_NONE             (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_NONE             (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 break;
 
             case SSL_ERROR_WANT_WRITE:
-                Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_WRITE       (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_WRITE       (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                    if (rc < 0 && ns_sockerrno == EWOULDBLOCK && Ns_SockWait(sslconn->socket, NS_SOCK_WRITE, sslconn->sendwait) != NS_OK) {
+                        return -1;
+                    }
                 break;
 
             case SSL_ERROR_WANT_READ:
                 /* We want to read but socket's nothing to read yet */
-                Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_READ        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_READ        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 break;
 
             case SSL_ERROR_WANT_X509_LOOKUP:
@@ -640,7 +645,7 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
 
             case SSL_ERROR_ZERO_RETURN:
                 /* We'll never see this error: either some bytes were written or we get a real error */
-                Ns_Log(Debug, "Send(%d): SSL_ERROR_ZERO_RETURN      (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_ZERO_RETURN      (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 break;
 
             default:
@@ -650,7 +655,7 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
 
     }
 
-    Ns_Log(Debug, "Send(%d): END:   towrite = %d, wrote = %d", socket, towrite, total);
+    //Ns_Log(Debug, "Send(%d): END:   towrite = %d, wrote = %d", socket, towrite, total);
     return total;
 }
 
@@ -698,7 +703,7 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
      */
 
 
-    Ns_Log(Debug, "Recv(%d): START: toread = %d, read = %d, pending = %d", socket, toread, total, SSL_pending(ssl));
+    //Ns_Log(Debug, "Recv(%d): START: toread = %d, read = %d, pending = %d", socket, toread, total, SSL_pending(ssl));
 
     do {
 
@@ -719,7 +724,7 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
             switch(SSL_get_error(ssl, rc)) {
 
                 case SSL_ERROR_NONE:
-                    Ns_Log(Debug, "Recv(%d): SSL_ERROR_NONE              (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                    //Ns_Log(Debug, "Recv(%d): SSL_ERROR_NONE              (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                     break;
 
                 case SSL_ERROR_WANT_WRITE:
@@ -727,11 +732,14 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
                     break;
 
                 case SSL_ERROR_WANT_READ:
-                    Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_READ         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                    //Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_READ         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                    if (rc < 0 && ns_sockerrno == EWOULDBLOCK && Ns_SockWait(sslconn->socket, NS_SOCK_READ, sslconn->recvwait) != NS_OK) {
+                        return -1;
+                    }
                     break;
 
                 case SSL_ERROR_WANT_X509_LOOKUP:
-                    Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_X509_LOOKUP  (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                    //Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_X509_LOOKUP  (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                     break;
 
                 case SSL_ERROR_SYSCALL:
@@ -745,7 +753,7 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
                     break;
 
                 case SSL_ERROR_ZERO_RETURN:
-                    Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                    //Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                     return -1;
                     break;
 
@@ -759,7 +767,7 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
 
     } while (SSL_get_error(ssl, rc) != SSL_ERROR_NONE);
 
-    Ns_Log(Debug, "Recv(%d): END:   toread = %d, read = %d", socket, toread, total);
+    //Ns_Log(Debug, "Recv(%d): END:   toread = %d, read = %d", socket, toread, total);
 
     return total;
 }
